--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
         <p>paragraph</p>
       </div>
     </div>
+    <div class="col-12 text-center mt-5">
+      <h3>Our Feature Courses</h3>
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br> 
+        Lorem Ipsum has been the industry's</p>
+    </div>
+    <div class="grid-container">
+      <div class="item1"><img src="img/11.png" alt=""></div>
+      <div class="item2"><img src="img/11.png" alt=""></div>
+      <div class="item3"><img src="img/11.png" alt=""></div> 
+      <div class="item4"><img src="img/11.png" alt=""></div>
+      <div class="item5"><img src="img/11.png" alt=""></div>
+      <div class="item6"><img src="img/11.png" alt=""></div>
+    </div>
   </div>
 </body>
 
