--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         Lorem Ipsum has been the industry's</p>
     </div>
     <div class="grid-container">
-      <div class="item1"><img src="img/11.png" alt=""></div>
-      <div class="item2"><img src="img/11.png" alt=""></div>
-      <div class="item3"><img src="img/11.png" alt=""></div> 
-      <div class="item4"><img src="img/11.png" alt=""></div>
-      <div class="item5"><img src="img/11.png" alt=""></div>
-      <div class="item6"><img src="img/11.png" alt=""></div>
+      <div class="item1"><img src="img/11.png" class="rounded-corners"></div>
+      <div class="item2"><img src="img/11.png" class="rounded-corners"></div>
+      <div class="item3"><img src="img/11.png" class="rounded-corners"></div> 
+      <div class="item4"><img src="img/11.png" class="rounded-corners"></div>
+      <div class="item5"><img src="img/11.png" class="rounded-corners"></div>
+      <div class="item6"><img src="img/11.png" class="rounded-corners"></div>
     </div>
   </div>
 </body>
